from app.Models.utente import utente

class cliente(utente):

    def __init__(self,nome):
        quit
