@startuml
title Package di Analisi: Notifiche

' Boundary e Control
interface InterfacciaCliente <<boundary>>
interface InterfacciaNegoziante <<boundary>>
class SistemaRichieste <<control>>
class GestoreConsegne <<control>>
class GestoreNotifiche <<control>>
class NotificaRepository <<repository>>
class ArchivioRichieste <<repository>>
class UtenteRepository <<repository>>
class Cliente <<entity>>
abstract Utente <<entity>>
class Negoziante

abstract class Utente <<entity>> {
    - id : Long
    - nome : String
    - email : String
    - telefono : String
}
class Richiesta <<entity>> {
    - id : Long
    - tipo : String
    - stato : String
    - data : Date
    - ora : String
    - contatti : String
    - descrizione : String
    - clienteId : Long
}

class Consegna <<entity>> {
    - id : Long
    - regione : String
    - citta : String
    - via : String
    - civico : String
    - stato : String
    - clienteId : Long
}

class Notifica <<entity>> {
    - id : Long
    - destinatario : String
    - messaggio : String
    - letta : Boolean
    - tipo : String
    - richiestaId : Long
}


InterfacciaNegoziante ..> GestoreNotifiche
GestoreNotifiche ..> NotificaRepository
GestoreNotifiche ..> ArchivioRichieste
NotificaRepository ..> Notifica
ArchivioRichieste ..> Richiesta
Richiesta "1" --> "0..*" Notifica


InterfacciaCliente ..> SistemaRichieste
SistemaRichieste ..> ArchivioRichieste

InterfacciaCliente ..> GestoreConsegne
GestoreConsegne ..> NotificaRepository

GestoreConsegne ..> UtenteRepository
UtenteRepository ..> Utente
Utente <|-- Cliente
Utente <|-- Negoziante
Cliente "1" --> "0..*" Richiesta
Cliente "1" --> "0..*" Consegna
Consegna "1" --> "0..*" Notifica



@enduml